<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/settable"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="20sp"
        android:textColor="@color/colorGray"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_weight="0.05"
        android:paddingTop="10dp"/>
    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="17.25sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="5dp"
            android:paddingBottom="7.5dp"
            android:textColor="@color/colorGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:padding="5dp"
                android:background="@color/colorGray"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stress"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:textColor="@color/colorBlack"
                android:padding="5dp"
                android:background="@color/colorGray" />
        </LinearLayout>
        <ListView
            android:id="@+id/history_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>